--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,23 @@ dependencies:
   cupertino_icons: ^1.0.8
   get_cli: ^1.8.1
   get: ^4.6.6
+  flutter_native_splash: ^2.4.4
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_native_splash:
+  color: '#000000'
+  image: assets/fiixconn-logo.png
+  android: true
+  ios: true
+
+flutter_icons:
+  android: launcher_icon
+  image_path: assets/fiixconn-logo.png
+  ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
